--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,70 @@
-gunicorn
-flask
+altair==5.5.0
+attrs==25.3.0
+blinker==1.9.0
+cachetools==5.5.2
+certifi==2025.1.31
+charset-normalizer==3.4.1
+click==8.2.1
+colorama==0.4.6
+filelock==3.18.0
+Flask==3.1.1
+fsspec==2025.5.1
+gitdb==4.0.12
+GitPython==3.1.44
+google-api-core==2.24.2
+google-api-python-client==2.166.0
+google-auth==2.38.0
+google-auth-httplib2==0.2.0
+googleapis-common-protos==1.69.2
+gunicorn==23.0.0
+httplib2==0.22.0
+idna==3.10
+itsdangerous==2.2.0
+Jinja2==3.1.6
+joblib==1.5.1
+jsonschema==4.24.0
+jsonschema-specifications==2025.4.1
+MarkupSafe==3.0.2
+mpmath==1.3.0
+narwhals==1.43.0
+networkx==3.5
+numpy==2.3.0
+oauth2client==4.1.3
+packaging==24.2
+pandas==2.3.0
+pillow==11.3.0
+proto-plus==1.26.1
+protobuf==6.30.2
+pyarrow==20.0.0
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
+pydeck==0.9.1
+PyDrive==1.3.1
+pyparsing==3.2.3
+python-dateutil==2.9.0.post0
+pytz==2025.2
+PyYAML==6.0.2
+referencing==0.36.2
+requests==2.32.3
+rpds-py==0.25.1
+rsa==4.9
+scikit-learn==1.7.0
+scipy==1.15.3
+setuptools==80.9.0
+six==1.17.0
+smmap==5.0.2
+streamlit==1.45.1
+sympy==1.14.0
+tenacity==9.1.2
+threadpoolctl==3.6.0
+toml==0.10.2
+torch==2.7.1
+torchaudio==2.7.1
+torchvision==0.22.1
+tornado==6.5.1
+typing_extensions==4.14.0
+tzdata==2025.2
+uritemplate==4.1.1
+urllib3==2.3.0
+watchdog==6.0.0
+Werkzeug==3.1.3
